package usecase

import (
	"context"
	"github.com/ferza17/ecommerce-microservices-v2/product-service/model/pb"
)

func (u *productUseCase) DeleteProductById(ctx context.Context, requestId string, req *pb.DeleteProductByIdRequest) (*pb.DeleteProductByIdResponse, error) {
	//TODO implement me
	panic("implement me")
}
